liteflow basic framework